--- a/Dockerfile.nessus-persist
+++ b/Dockerfile.nessus-persist
@@ -1,9 +1,8 @@
 # data volume
+# data volume
 #
 # VERSION               0.0.1
 
-FROM    busybox
+FROM    scratch
 MAINTAINER JC Weir "jweir@ise.com"
-VOLUME  /opt/nessus-persist
-
-CMD    /bin/true
+VOLUME  /opt/nessus-persist/
