--- a/backup-nessus.service
+++ b/backup-nessus.service
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 [Unit]
-Description=Backup of running Nessus container
+Description=generate local backup of running Nessus container
 
 [Service]
 Type=oneshot
